add note to indicators in doc

--- a/docs/content/catalog.tex
+++ b/docs/content/catalog.tex
@@ -131,6 +131,8 @@ Indicators measure the activities of the market. Traders depend on indicators to
   \hline
 \end{tabularx}
 
+Normally you don't have the need to create indicators, as the traders automatically create indicators that they depend on.
+
 \subsection{Traders}
 
 Traders buy or sell in the virtual market. Different types of traders use different trading strategies. The same strategy may take different parameters thus perform differently. Currently TradingSimulation provides following indicators:\\
