refine wording in docs

--- a/docs/content/catalog.tex
+++ b/docs/content/catalog.tex
@@ -129,7 +129,7 @@ Indicators measure the activities of the market. Traders depend on indicators to
   \hline
   OhlcIndicator & OHLC(Open-high-low-close)  \\
   \hline
-\end{tabularx}
+\end{tabularx}\\[0.3cm]
 
 Normally you don't have the need to create indicators, as the traders automatically create indicators that they depend on.
 
@@ -209,7 +209,7 @@ Persistors load data from and save data to SQLite database. Currently TradingSim
   \hline
 \end{tabularx}\\[0.3cm]
 
-Note that none of the persistors above are components themselves. They have to be used together with other classes for different purposes.
+Note that none of the persistors above are components themselves. They have to be used together with other classes depending one the scenario.
 
 \subsubsection{Storing Data to Database}
 
