--- a/docs/guide.tex
+++ b/docs/guide.tex
@@ -81,10 +81,10 @@
 \input{content/cover}
 \include{content/preface}
 
-\pagenumbering{Roman}
+%% \pagenumbering{Roman}
 \tableofcontents
 
-\pagenumbering{arabic}
+%% \pagenumbering{arabic}
 
 \include{content/introduction}
 \include{content/components}
