use textttt for the file name get-data.sh

--- a/docs/content/catalog.tex
+++ b/docs/content/catalog.tex
@@ -194,7 +194,7 @@ Note that all the fetchers in the table above are not components themselves, exc
 
 \subsubsection{HistDataCSVFetcher}
 
-This uses historical quote data from the free financial data provider histdata.com\footnote{More specifically http://www.histdata.com/download-free-forex-data/?/ninjatrader/tick-\{ask, bid\}-quotes}. The data we used can be comfortably fetched by using our get-data.sh script. For example,  following command can be used to get a set of CSV files to  \lstinline|./data/EURCHF|.
+This uses historical quote data from the free financial data provider histdata.com\footnote{More specifically http://www.histdata.com/download-free-forex-data/?/ninjatrader/tick-\{ask, bid\}-quotes}. The data we used can be comfortably fetched by using our \texttt{get-data.sh} script. For example,  following command can be used to get a set of CSV files to  \lstinline|./data/EURCHF|.
 
 \begin{verbatim}
    scripts/get-data.sh www.histdata.com EURCHF
