--- a/docs/content/cover.tex
+++ b/docs/content/cover.tex
@@ -14,6 +14,7 @@
     \begin{framed}
     Project of Big Data Course \\
     Professor: Christoph Koch \\
+    Supervisor: Mohammad Dashti
     \end{framed}
 
     \noindent
