--- a/docs/content/examples.tex
+++ b/docs/content/examples.tex
@@ -56,7 +56,7 @@ Due to this special requirement to disconnect components and change market rules
 
 In the graph above, there're only two traders, but you can add as many traders as you need. The traders are encapsulated in evaluators, so that the printer can print the performance of traders in the console.
 
-In the full simulation, it's important to cut off the data source once the market get activated. This can be achieved using following code snippet:
+In the full simulation, it's important to cut off the data source once the market gets activated. This can be achieved using following code snippet:
 
 \begin{lstlisting}[language=Scala]
   val timer = new Timer()
