Smaller EPFL logo

--- a/docs/content/cover.tex
+++ b/docs/content/cover.tex
@@ -1,3 +1,5 @@
+%!TEX root = ../guide.tex
+
 \begin{titlepage}
 
   \begin{center}
@@ -5,11 +7,11 @@
     %% \vspace{20cm}
     \vspace*{3\baselineskip}
     % Title
-    {\Large \bfseries Programming Guide for TradingSimulation \\[0.4cm] }
+    {\Large \bfseries Trading Simulation framework: Programming Guide\\[0.4cm] }
 
-    % Author and supervisor
+    % Authors and supervisor
     \noindent
-    TradingSimulation Developer Team \\[4cm]
+    The Trading Simulation Developer Team \\[4cm]
 
     \begin{framed}
     Project of Big Data Course \\
@@ -18,11 +20,11 @@
     \end{framed}
 
     \noindent
-    Lausanne, Academic Year 2014 - 2015 \\[1cm]
+    Lausanne, Academic Year 2014 - 2015 \\[0.3cm]
 
     % Upper part of the page. The '~' is needed because \\
     % only works if a paragraph has started.
-    \includegraphics[width=0.8\textwidth]{img/epfl}~\\[1cm]
+    \includegraphics[width=0.2\textwidth]{img/epfl}~\\[1cm]
 
     \vfill
 
