Meta-comments (just to help some build systems)

--- a/docs/content/catalog.tex
+++ b/docs/content/catalog.tex
@@ -1,3 +1,5 @@
+%!TEX root = ../guide.tex
+
 \section{Catalog of Components}
 
 This section introduces each component that TradingSimulation provides in detail, including what data they expect, what data they output, what parameters can be set.
