--- a/docs/content/preface.tex
+++ b/docs/content/preface.tex
@@ -1,3 +1,5 @@
+%!TEX root = ../guide.tex
+
 \subsection*{Preface}
 
 The targeted audience of this documentation is developers who want to use the TradingSimulation framework to experiment with algorithmic trading or contribute to the TradingSimulation project. The readers should have some background in algorithmic trading or have access to expertises of the field. The reader should also be familiar with programming in Scala.
