Add a short section about running a distributed deployment

--- a/docs/guide.tex
+++ b/docs/guide.tex
@@ -91,5 +91,6 @@
 \include{content/catalog}
 \include{content/examples}
 \include{content/simulation}
+\include{content/distributed-setup}
 
 \end{document}
